<?xml version="1.0" encoding="UTF-8"?>
<project 

   xmlns                ="http://maven.apache.org/POM/4.0.0"
   xmlns:xsi            ="http://www.w3.org/2001/XMLSchema-instance"
   xsi:schemaLocation   ="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">

   <modelVersion>4.0.0</modelVersion>

   <name>MyTourbook App</name>

   <artifactId>mytourbook-app</artifactId>   <groupId>net.tourbook</groupId>
                                             <version>26.3.0-SNAPSHOT</version>
   <packaging>pom</packaging>
   
   <dependencies>
      <dependency>
         <artifactId>junit-jupiter</artifactId>                  <groupId>org.junit.jupiter</groupId>
                                                                 <version>6.1.0-M1</version>
         <scope>test</scope>
      </dependency>
   </dependencies>	

   <properties>
      <!-- Tycho 4 because of this issue with NatTable 2.6.0 https://github.com/eclipse-nattable/nattable/issues/177#issuecomment-3597428568 --> 
      <tycho.version>4.0.13</tycho.version>     
      <surefire.version>3.5.4</surefire.version>
      <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>  
   </properties>

   <modules>
      <!-- artifact.bundles -->
      <module>../../mytourbook-BUILD-autocreated/core</module>
      
      <!-- artifact.mytourbook.plugins.i18 -->
      <module>../../mytourbook-BUILD-autocreated/translation</module>
   </modules>
   

   <profiles>
   
      <profile>
         <id>build-release</id>
         <modules>
            <module>features</module>
            <module>build</module>
         </modules>
      
      </profile>

      <profile>
         <id>build-update-site</id>
         <modules>
            <module>features</module>
            <module>build/build.update-site</module>
         </modules>
      </profile>

      <profile>
         <id>build-update-site-no-nl</id>
         <modules>
            <module>features</module>
            <module>build/build.update-site-no-NL</module>
         </modules>
      </profile>
      
   </profiles>


   <repositories>

      <!-- Eclipse E4 web repository -->
      
      <repository>
         <id>eclipse.platform.4.37</id>                                                <layout>p2</layout>
         <url>https://download.eclipse.org/releases/2025-09/202509101001/</url>
      </repository>   

      <repository>
         <id>eclipse.nattable.2.6.0</id>                                               <layout>p2</layout>
         <url>http://download.eclipse.org/nattable/releases/2.6.0/repository/</url>
      </repository> 
      
      <repository>
         <id>eclipse.collections.11.1.0</id>                                           <layout>p2</layout>
         <url>https://download.eclipse.org/collections/11.1.0/repository/</url>
      </repository> 
      
      <repository>
         <id>eclipse.nebula.3.2.0</id>                                                 <layout>p2</layout>
         <url>https://download.eclipse.org/nebula/updates/release/3.2.0</url>
      </repository> 
      
      <!-- IMPORTANT: Keep that tag in a single line as it is commented out during the GitHub build -->
      <!-- 
         !!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!! 
         I was not able to use a relative path for the p2 repo, only the absolute path worked :-((( 
         !!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!! 
      -->
      <repository>   <id>eclipse.4.26.nl</id>   <layout>p2</layout>   <url>file:/DAT/MT/mytourbook/build/build.eclipse.4.26.nl.repo</url>   </repository>

<!-- 
   OK <repository>   <id>eclipse.4.26.nl</id>   <layout>p2</layout>   <url>file:/DAT/MT/mytourbook/build/build.eclipse.4.26.nl.repo</url>   </repository>
   OK <repository>   <id>eclipse.4.26.nl</id>   <layout>p2</layout>   <url>file:/build.eclipse.4.26.nl.repo</url>                           </repository>
   OK <repository>   <id>eclipse.4.26.nl</id>   <layout>p2</layout>   <url>file:/eclipse-nl-repo-SMALL</url>                                </repository>

      <repository>   <id>eclipse.4.26.nl</id>   <layout>p2</layout>   <url>file:build/build.eclipse.4.26.nl.repo</url>   </repository>
      
      This works but it is veeeery slow
      <repository>   <id>eclipse.4.26.nl</id>   <layout>p2</layout>   <url>https://download.eclipse.org/technology/babel/update-site/R0.20.0/2022-12/</url>   </repository> 
      
      <repository>   <id>eclipse.4.23.nl</id>   <layout>p2</layout>   <url>file:build/build.eclipse.4.23.nl.repo</url>                             </repository>
-->

   </repositories>

   <build>
   
      <testSourceDirectory>${project.basedir}/src-test</testSourceDirectory>

<!-- 
      <defaultGoal>clean verify</defaultGoal>
-->
      <plugins>

         <plugin>
            <artifactId>tycho-maven-plugin</artifactId>              <groupId>org.eclipse.tycho</groupId>
                                                                     <version>${tycho.version}</version>
            <extensions>true</extensions>
         </plugin>

         <plugin>
            <artifactId>tycho-compiler-plugin</artifactId>           <groupId>org.eclipse.tycho</groupId>
                                                                     <version>${tycho.version}</version>
            <configuration>

               <!-- Fix this problem (and propably others)

                Access restriction: The method 'BaseDateTime.getMillis()' is not API 
                (restriction on classpath entry 'C:\DAT\MT\mytourbook\bundles\net.tourbook.ext.jars\joda-time-2.1.jar')

                -->
               <compilerArgument>-warn:none</compilerArgument>
               <compilerArgument>-err:none</compilerArgument>
            </configuration>
         </plugin>

         <plugin>
            <artifactId>tycho-packaging-plugin</artifactId>          <groupId>org.eclipse.tycho</groupId>
                                                                     <version>${tycho.version}</version>
            <configuration>

               <!-- !!! Hide default user name in manifest files and set a new name !!! -->
               <archive>
                  <addMavenDescriptor>false</addMavenDescriptor>
                  <manifestEntries>
                     <Built-By>MyTourbook App Builder</Built-By>
                  </manifestEntries>
               </archive>

               <!-- set qualifier date format, 'v' is a prefix 
               <format>'v'yyyyMMdd-HHmm</format>

               the 'v' do NOT work with the update site (testing translated texts)

               -->
               <format>yyyyMMdd-HHmm</format>

            </configuration>
         </plugin>

         <plugin>
            <artifactId>target-platform-configuration</artifactId>   <groupId>org.eclipse.tycho</groupId>
                                                                     <version>${tycho.version}</version>
            <configuration>
               <resolver>p2</resolver>
               <environments>
                  
                  <environment>   <os>win32</os>      <ws>win32</ws>    <arch>x86_64</arch>     </environment>
                  <environment>   <os>win32</os>      <ws>win32</ws>    <arch>aarch64</arch>    </environment>

                  <environment>   <os>linux</os>      <ws>gtk</ws>      <arch>x86_64</arch>     </environment>
                  <environment>   <os>linux</os>      <ws>gtk</ws>      <arch>aarch64</arch>    </environment>
                  
                  <environment>   <os>macosx</os>     <ws>cocoa</ws>    <arch>x86_64</arch>     </environment>
                  <environment>   <os>macosx</os>     <ws>cocoa</ws>    <arch>aarch64</arch>    </environment>

               </environments>
            </configuration>
         </plugin>

      <plugin>
         <artifactId>maven-surefire-plugin</artifactId>        <groupId>org.apache.maven.plugins</groupId>
                                                               <version>${surefire.version}</version>
         <configuration>
            <skipTests>true</skipTests>
         </configuration>
         <dependencies>
            <dependency>
               <!-- This is to force Maven Surefire to use JUnit 5 as, otherwise, JUnit 4 is used and tests are not detected/run!? -->
               <groupId>org.apache.maven.surefire</groupId>
               <artifactId>surefire-junit-platform</artifactId>
               <version>${surefire.version}</version>
            </dependency>
         </dependencies>
         <executions>
            <execution>
               <goals>
                  <goal>test</goal>
               </goals>
            </execution>
         </executions>
      </plugin>
      
      <plugin>
         <artifactId>maven-compiler-plugin</artifactId>        <groupId>org.apache.maven.plugins</groupId>
                                                               <version>3.14.1</version>
         <executions>
            <execution>
               <id>compiletests</id>
               <phase>test-compile</phase>
               <goals>
                  <goal>testCompile</goal>
               </goals>
            </execution>
         </executions>
         <configuration>
               <release>17</release>
         </configuration>
      </plugin>
      
      <plugin>
         <artifactId>maven-toolchains-plugin</artifactId>      <groupId>org.apache.maven.plugins</groupId>
                                                               <version>3.2.0</version>
         <executions>
            <execution>
               <goals>
                  <goal>toolchain</goal>
               </goals>
            </execution>
         </executions>
        
         <configuration>
            <toolchains>
               <jdk>
                  <version>21</version>
                  <vendor>openjdk</vendor>
               </jdk>
            </toolchains>
         </configuration>
      </plugin>
      
      <plugin>
         <artifactId>jacoco-maven-plugin</artifactId>          <groupId>org.jacoco</groupId>
                                                               <version>0.8.14</version>
         <executions>
         
            <execution>
               <goals>
                  <goal>prepare-agent</goal>
               </goals>
            </execution>
            
            <execution>
               <id>all-tests-report</id>
               <phase>verify</phase>
               <goals>
                  <goal>report-aggregate</goal>
               </goals>
               <configuration>
                  <skip>true</skip>
               </configuration>
            </execution>
            
            <execution>
               <id>merge-all-jacoco</id>
               <phase>verify</phase>
               <goals>
                  <goal>merge</goal>
               </goals>
               <configuration>
                  <destFile>${session.executionRootDirectory}/mergedJaCoCoReport.exec</destFile> 
                  <append>true</append> 
                  <skip>true</skip>
                  <fileSets>
                     <fileSet>
                        <directory>${project.build.directory}</directory>
                        <includes>
                          <include>*.exec</include>
                        </includes>
                     </fileSet>
                     <fileSet>
                        <directory>${session.executionRootDirectory}</directory>
                        <includes>
                          <include>mergedJaCoCoReport.exec</include>
                        </includes>
                     </fileSet>
                  </fileSets>
               </configuration> 
            </execution>
            
         </executions>
      </plugin>

    </plugins>
  </build>

</project>
